/*
 * Copyright (c) 2019-2026 LabKey Corporation. All rights reserved. No portion of this work may be reproduced
 * in any form or by any electronic or mechanical means without written permission from LabKey Corporation.
 */
import React from 'react';
import { render } from '@testing-library/react';

import { TEST_USER_ASSAY_DESIGNER, TEST_USER_READER } from '../../userFixtures';

import { UserDetailHeader } from './UserDetailHeader';

describe('UserDetailHeader', () => {
    test('default properties', () => {
        const component = <UserDetailHeader title="Title" user={TEST_USER_READER} />;
        const { container } = render(component);
        expect(container).toMatchSnapshot();
    });

    test('optional properties', () => {
        const component = (
            <UserDetailHeader
                container={{ title: 'Container Title' }}
                dateFormat="YYYY-MM-DD"
                renderButtons={
                    <button className="btn btn-default" type="button">
                        Test
                    </button>
                }
                title="Title (Custom)"
                user={TEST_USER_ASSAY_DESIGNER}
                userProperties={{ lastLogin: '2019-11-15 13:50:17.987' }}
            />
        );
        const { container } = render(component);
        expect(container).toMatchSnapshot();
    });
});
