// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserDetailHeader default properties 1`] = `
<div>
  <div
    class="page-header"
  >
    <div
      class="col-xs-12 col-md-9 detail__header--container"
    >
      <div
        class="detail__header--image-container"
      >
        <img
          alt="ReaderDisplayName avatar"
          class="detail__header-icon"
          src="/labkey/_images/defaultavatar.png"
        />
      </div>
      <div
        class="detail__header-icon--body-container"
      >
        <h2
          class="no-margin-top detail__header--name"
        >
          Title
        </h2>
      </div>
    </div>
    <div
      class="pull-right"
    />
    <div
      class="clearfix"
    />
  </div>
</div>
`;

exports[`UserDetailHeader optional properties 1`] = `
<div>
  <div
    class="page-header"
  >
    <div
      class="col-xs-12 col-md-9 detail__header--container"
    >
      <div
        class="detail__header--image-container"
      >
        <img
          alt="AssayDesignerDisplayName avatar"
          class="detail__header-icon"
          src="/labkey/_images/defaultavatar.png"
        />
      </div>
      <div
        class="detail__header-icon--body-container"
      >
        <h2
          class="no-margin-top detail__header--name"
        >
          Title (Custom)
        </h2>
      </div>
    </div>
    <div
      class="pull-right"
    >
      <div
        class="detail__header--desc"
      >
        <i
          class="fa fa-folder-open"
        />
         
        Container Title
      </div>
      <div
        class="detail__header--desc pull-right"
      >
        Last Login: 
        2019-11-15
      </div>
      <div
        class="detail__header--buttons"
      >
        <button
          class="btn btn-default"
          type="button"
        >
          Test
        </button>
      </div>
    </div>
    <div
      class="clearfix"
    />
  </div>
</div>
`;
